Nova added, misc progress continued

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,7 +1,7 @@
 @import "~bulma/sass/utilities/_all";
 
 // Setup main branding colors
-$primary: #FFA800;
+$primary: #F59118;
 $primary-invert: findColorInvert($primary);
 //$primary: #FF7F00;
 //$primary-invert: findColorInvert($primary);
