--- a/manage/resources/css/app.css
+++ b/manage/resources/css/app.css
@@ -130,8 +130,8 @@ input[type='search']::-webkit-search-cancel-button {
 }
 
 .form-control-focus {
-  outline: none !important;
-  box-shadow: 0 0 8px config('colors.primary') !important;
+  outline: none;
+  box-shadow: 0 0 8px config('colors.primary');
 }
 
 .form-input:focus,
