Started wiring up bounty directory, misc general setup/cleanup/updates continued.

--- a/manage/resources/css/app.css
+++ b/manage/resources/css/app.css
@@ -10,8 +10,8 @@
   --success: #21b978;
   --warning: #ffeb3b;
   --info: #03a9f4;
-  --primary: #4099de;
-  --primary-dark: #297ec0;
+  --primary: #F59118;
+  --primary-dark: #F59118;
   --primary-70: rgba(64, 153, 222, 0.7);
   --primary-50: rgba(64, 153, 222, 0.5);
   --primary-30: rgba(64, 153, 222, 0.3);
