Progress continued, upload features for profile pages, misc

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 // @import '~bootstrap/scss/bootstrap';
 @import '~sweetalert2/src/sweetalert2';
+@import '~cropperjs/src/css/cropper';
 // @import '~flag-icon-css/sass/flag-icon';
 @import '~animate.css/animate';
 
