--- a/resources/sass/layouts/_default.scss
+++ b/resources/sass/layouts/_default.scss
@@ -237,6 +237,24 @@ aside.menu {
 	color: $medium-blog-invert;
 }
 
+.is-facebook {
+	color: #3b5998;
+}
+
+.is-google {
+	color: #db4a39;
+}
+
+.is-linkedin {
+	color: #0077B5;
+}
+
+.is-telegram {
+	color: #0088cc;
+}
+
+
+
 .is-bold {
 	font-weight: 700;
 }
